# Lex_DDD

./: .config  .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: models.py
app/api/: verification.py
app/api/prompt/: article.py  recommend.py  search.py
app/api/user/: auth.py  social.py
app/core/: __init__.py  config.py  db.py  exceptions.py  lifecycle.py  responses.py
app/services/: __init__.py  verification.py
app/services/prompt/: content.py  recommend.py  tag.py
app/services/user/: __init__.py  auth.py  base.py
app/utils/: email.py  sms.py
data/templates/email/: verification_code.html
docs/: README.md  _sidebar.md  ai-prompting-guide.md  architecture-design.md  development-guide.md  index.html  routing-guide.md
src/application/: __init__.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py  config.py  database.py  email.py  exceptions.py  lifecycle.py  models.py  sms.py
src/interfaces/: __init__.py  responses.py
src/interfaces/routers/: __init__.py  base.py  test.py  user.py
